# ds4

./: .gitignore  README.md  RUST_REWRITE_NOTES.md
docs/superpowers/specs/: 2026-07-04-ds4-rust-rewrite-design.md  REVERSE-ENGINEERING-DS4.md
ds4-rust/: .gitignore  Cargo.toml  LICENSE  README.md
ds4-rust/crates/ds4-backend-arc/: Cargo.toml
ds4-rust/crates/ds4-backend-arc/src/: backend.rs  kernels.rs  lib.rs  runtime.rs
ds4-rust/crates/ds4-backend-cpu/: Cargo.toml
ds4-rust/crates/ds4-backend-cpu/src/: attention.rs  backend.rs  lib.rs  matmul.rs  rmsnorm.rs  rope.rs  softmax.rs
ds4-rust/crates/ds4-backend-cuda/: Cargo.toml
ds4-rust/crates/ds4-backend-cuda/src/: backend.rs  buffers.rs  kernels.rs  lib.rs  runtime.rs
ds4-rust/crates/ds4-backend-metal/: Cargo.toml
ds4-rust/crates/ds4-backend-metal/src/: backend.rs  buffers.rs  kernels.rs  lib.rs
ds4-rust/crates/ds4-backend-paged/: Cargo.toml
ds4-rust/crates/ds4-backend-paged/src/: backend.rs  lib.rs  page_table.rs  paged_attention.rs
ds4-rust/crates/ds4-backend-rocm/: Cargo.toml
ds4-rust/crates/ds4-backend-rocm/src/: backend.rs  buffers.rs  kernels.rs  lib.rs
ds4-rust/crates/ds4-backend-vulkan/: Cargo.toml
ds4-rust/crates/ds4-backend-vulkan/src/: backend.rs  lib.rs  runtime.rs
ds4-rust/crates/ds4-cli/: Cargo.toml
ds4-rust/crates/ds4-cli/src/: help.rs  main.rs  one_shot.rs  repl.rs
ds4-rust/crates/ds4-core/: Cargo.toml
ds4-rust/crates/ds4-core/src/: chat.rs  engine.rs  gguf.rs  gguf_synth.rs  kv.rs  lib.rs  mtp.rs  sampler.rs  session.rs  tokenizer.rs  tokenizer_data.rs
ds4-rust/crates/ds4-core/tests/: end_to_end.rs
ds4-rust/crates/ds4-dist/: Cargo.toml
ds4-rust/crates/ds4-dist/src/: coordinator.rs  lib.rs  protocol.rs  worker.rs
ds4-rust/crates/ds4-gguf/: Cargo.toml
ds4-rust/crates/ds4-gguf/src/: lib.rs  model_spec.rs  synth.rs
ds4-rust/crates/ds4-imatrix/: Cargo.toml
ds4-rust/crates/ds4-imatrix/src/: collector.rs  format.rs  lib.rs
ds4-rust/crates/ds4-kvstore/: Cargo.toml
ds4-rust/crates/ds4-kvstore/src/: lib.rs  lru.rs  payload.rs  prefix.rs  store.rs
ds4-rust/crates/ds4-quant/: Cargo.toml
ds4-rust/crates/ds4-quant/src/: f16.rs  f32.rs  format.rs  iq2_xxs.rs  lib.rs  luts.rs  q2_k.rs  q3_k.rs  q4_k.rs  q8_0.rs  tests.rs
ds4-rust/crates/ds4-server/: Cargo.toml
ds4-rust/crates/ds4-server/src/: anthropic.rs  dsml.rs  engine_pool.rs  id.rs  lib.rs  main.rs  openai.rs  routes.rs  streaming.rs
ds4-rust/crates/ds4-ssd/: Cargo.toml
ds4-rust/crates/ds4-ssd/src/: expert_cache.rs  hotlist.rs  lib.rs  stream.rs
ds4-rust/crates/ds4-tensor/: Cargo.toml
ds4-rust/crates/ds4-tensor/src/: dtype.rs  lib.rs  shape.rs  tensor.rs
ds4-rust/crates/ds4-types/: Cargo.toml
ds4-rust/crates/ds4-types/src/: lib.rs
ds4-rust/tests/: regression.rs
ds4-rust/tools/: vendor-check.sh
