[package]
name = "ds4-backend-cpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) — CPU correctness backend (hand-rolled reference kernels)"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
ds4-gguf = { workspace = true }
ds4-quant = { workspace = true }
ds4-tensor = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
