[package]
name = "ds4-backend-rocm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) ROCm/HIP backend and kernel source port"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
ds4-backend-cpu = { workspace = true }
ds4-gguf = { workspace = true }
ds4-quant = { workspace = true }
ds4-tensor = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
