[package]
name = "ds4-backend-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) Vulkan backend"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
ds4-gguf = { workspace = true }
