[package]
name = "ds4-dist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) — distributed inference (v1 wire protocol + state machines; layer dispatch and state machines)"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
ds4-tensor = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }