[package]
name = "ds4-gguf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) GGUF parser and typed tensor metadata"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
memmap2 = { workspace = true }
