[package]
name = "ds4-kvstore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) — disk KV cache (DSV4 / DSVL payload formats)"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
ds4-tensor = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
memmap2 = { workspace = true }
sha1 = { workspace = true }
byteorder = { workspace = true }
parking_lot = { workspace = true }
crc32fast = { workspace = true }
log = { workspace = true }