[package]
name = "ds4-ssd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) — SSD streaming glue + hotlist loader"

[lints]
workspace = true

[dependencies]
ds4-types = { workspace = true }
ds4-kvstore = { workspace = true }
ds4-tensor = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }