[package]
name = "ds4-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "DS4 (DwarfStar) — leaf type definitions (no deps on other ds4 crates)"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }